양방향 연관관계 주의점 추가

--- a/jpa/양방향 연관관계.md
+++ b/jpa/양방향 연관관계.md
@@ -172,6 +172,8 @@ public class School {
     
     @OneToMany(mappedBy = "school")
     private List<Student> students = new ArrayList<Student>();
+    
+    // Getter, Setter
 }
 ```
 
@@ -213,3 +215,90 @@ List 형식으로 필드가 존재합니다. 그래서 그 List 타입에 @OneTo
 mappedBy는 누구한테 매핑당할 것인가?를 작성하는 곳인데
 이것을 작성해주지 않으면 어떤 객체를 List 형식으로 가지고 있어야 하는지를 모르기 때문에
 반드시 작성해주어야 한다.
+
+### 6. 양방향 연관관계의 주의점
+
+양방향 연관관계를 유지하여도 딱히 큰 문제는 없어보인다.
+하지만 영속성 컨텍스트에 객체들이 들어가기 전에 순수한 객체 상태일 때 만약 연관관계를 이용하여
+객체 그래프 탐색을 하면 어떻게 될까?
+
+```java
+School school = new School();
+school.setName("DSM");
+school.setArea("Daejeon");
+
+Student student = new Student();
+student.setName("이진혁");
+student.setNum("2417");
+student.setSchool(school);
+
+// entityManager.persist(school);
+// entityManager.persist(student);
+
+student.getTeam().getName();	// DSM
+school.getStudents().stream().findAny().get();		// null -> Exception
+```
+
+이렇게 영속성 컨텍스트에 객체를 저장하지 않은 상태에서 만약 객체 그래프 탐색을 할 경우
+Student에서의 객체 그래프 탐색은 간으하지만 School에서는 객체 그래프 탐색을 하려고 하면
+예외가 발생한다. 왜냐하면 @OneToMany나 @ManyToOne과 같은 어노테이션이 작동하려면
+영속성 컨텍스트에 들어가야 하는데 영속성 컨텍스트에 들어가지 않은 순수한 상태의 객체는
+아무 것도 작동하지 않기 때문이다.
+
+따라서 이럴 경우 반드시 순수 객체 상태를 고려해야 하기 때문에 다음과 같은 코드를 작성할 때
+두 실행문을 동시에 실행해야 한다.
+
+```java
+student.setSchool(school);
+->
+student.setSchool(school);
+school.getStudents().add(student);
+```
+
+이러면 순수 객체 상태에서도 양방향 객체 그래프 탐색이 가능하다.
+
+그럼 이 코드들을 원자적으로 둘을 모두 실행해야 하는데
+실행하는 코드가 만약 엄청나게 많다면?
+그럴 경우 코드는 두 배 가량 많아지게 된다.
+그래서 setSchool() setter를 고침으로써 코드를 줄일 수 있다.
+
+```java
+public class Student {
+    private School school;
+    
+    public void setSchool(School school) {
+        this.school = school;
+        school.getStudents().add(this);
+    }
+}
+```
+
+이러면 student.setSchool(school); 코드를 실행함과 동시에
+school.getStudents().add(student); 도 실행되게 된다.
+하지만 이것도 오류가 존재한다.
+만약 다음과 같이 하나의 Student 객체의 School을 두 번 변경하면 오류가 발생한다.
+
+```java
+student.setSchool(school1);
+student.setSchool(school2);
+```
+
+이러면 내부적으로 school1에도 student가 들어가고 school2에도 student가 들어가는데
+이럴 경우 student가 school1에도 school2에도 속해 있는 상태가 된다.
+그래서 setSchool() 메소드를 조금 변경해주어야 한다.
+
+```java
+public class Student {
+    private School school;
+    
+    public void setSchool(School school) {
+        if(this.school != null)
+            this.school.getStudents().remove(this);
+        this.school = school;
+        school.getStudents().add(this);
+    }
+}
+```
+
+이렇게 null 처리를 해주고 현재 학생의 현재 학교의 학생 리스트에서 자신을 빼고
+새로운 학교를 등록하면 이러한 오류가 발생하지 않는다.
